More changes to rebrand

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="section intro">
       <div class="content">
 
-        <img class="logo" src="assets/ghost-logo.svg">
+        <img class="logo" src="assets/falcon-logo.svg">
 
         <blockquote class="quote">
           <p>&ldquo;A specter is haunting the modern world, the specter of crypto anarchy.&rdquo;</p>
