--- a/src/assets/closingWindow/closingWindow.html
+++ b/src/assets/closingWindow/closingWindow.html
@@ -12,7 +12,7 @@
     <div class="section intro">
       <div class="content">
 
-        <img class="logo" src="assets/ghost-logo.svg">
+        <img class="logo" src="assets/falcon-logo.svg">
         <blockquote class="quote">
           <p>Daemon shutting down...</p>
         </blockquote>
